tests/fixtures/aws/ec2-describe-vpc-endpoints-s3-gateway-vpce-09b2f7b21a4f625f3.json
{
  "VpcEndpoints": [
    {
      "VpcEndpointId": "vpce-09b2f7b21a4f625f3",
      "VpcEndpointType": "Gateway",
      "VpcId": "vpc-0f3afcaa1a4b1d6b8",
      "ServiceName": "com.amazonaws.us-east-2.s3",
      "State": "available",
      "PolicyDocument": "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}",
      "RouteTableIds": [
        "rtb-024e2d861c0574a7b"
      ],
      "SubnetIds": [],
      "Groups": [],
      "IpAddressType": "ipv4",
      "DnsOptions": {
        "DnsRecordIpType": "service-defined"
      },
      "PrivateDnsEnabled": false,
      "RequesterManaged": false,
      "NetworkInterfaceIds": [],
      "DnsEntries": [],
      "CreationTimestamp": "2026-05-01T05:08:15+00:00",
      "Tags": [],
      "OwnerId": "558069890522",
      "ServiceRegion": "us-east-2"
    }
  ]
}
