tests/fixtures/aws/elbv2-describe-rules-cache-proxy-test.json
{
  "Rules": [
    {
      "RuleArn": "arn:aws:elasticloadbalancing:eu-central-1:558069890522:listener-rule/app/cache-proxy-test/a6aba2020bec36a9/259e482b3e133823/226760860030b595",
      "Priority": "default",
      "Conditions": [],
      "Actions": [
        {
          "Type": "forward",
          "TargetGroupArn": "arn:aws:elasticloadbalancing:eu-central-1:558069890522:targetgroup/cache-proxy-test/546ae6a0af46af8c",
          "Order": 1,
          "ForwardConfig": {
            "TargetGroups": [
              {
                "TargetGroupArn": "arn:aws:elasticloadbalancing:eu-central-1:558069890522:targetgroup/cache-proxy-test/546ae6a0af46af8c",
                "Weight": 1
              }
            ],
            "TargetGroupStickinessConfig": {
              "Enabled": false
            }
          }
        }
      ],
      "IsDefault": true
    }
  ]
}
